now with correct spelling of platforms

--- a/settings.yaml
+++ b/settings.yaml
@@ -1,4 +1,4 @@
 AUTOMATION_HOST: 10.65.80.46
-AUTOMATION_DB: AUTOMATIONTEST
+AUTOMATION_DB: AUTOMATION
 AUTOMATION_USER: dummy
 AUTOMATION_PASS: dummy
