Dummy seed now includes a recursion field entry

--- a/settings.yaml
+++ b/settings.yaml
@@ -1,4 +1,4 @@
-AUTOMATION_HOST: 127.0.0.1
+AUTOMATION_HOST: melchior.local
 AUTOMATION_DB: AUTOMATION
 AUTOMATION_USER: dummy
 AUTOMATION_PASS: dummy
