fixed missing accent on build_and_install

--- a/settings.yaml
+++ b/settings.yaml
@@ -1,4 +1,4 @@
-AUTOMATION_HOST: melchior.local
+AUTOMATION_HOST: localhost
 AUTOMATION_DB: AUTOMATION
 AUTOMATION_USER: dummy
 AUTOMATION_PASS: dummy
