--- a/database/migrations/build.xml
+++ b/database/migrations/build.xml
@@ -8,7 +8,7 @@
     <property name="db.name" value="DG" />
     <property name="db.username" value="dummy" />
     <property name="db.password" value="dummy" />
-    <property name="db.seedconf" value="test" />
+    <property name="db.seedconf" value="prod" />
     <property name="db.url" value="jdbc:mysql://${db.host}/${db.name}" />
 
     <path id="mysql.classpath">
