--- a/database/migrations/build.xml
+++ b/database/migrations/build.xml
@@ -4,11 +4,11 @@
                                                                
     <property environment="env"/>
     <property name="db.driver" value="com.mysql.jdbc.Driver" />
-    <property name="db.host" value="localhost" />
-    <property name="db.name" value="DG" />
+    <property name="db.host" value="172.20.167.80" />
+    <property name="db.name" value="AUTOMATION" />
     <property name="db.username" value="dummy" />
     <property name="db.password" value="dummy" />
-    <property name="db.seedconf" value="prod" />
+    <property name="db.seedconf" value="test" />
     <property name="db.url" value="jdbc:mysql://${db.host}/${db.name}" />
 
     <path id="mysql.classpath">
