Enabled rake seed to reseed the data without having to run build_and_install.sh every time.

--- a/settings.yaml
+++ b/settings.yaml
@@ -2,4 +2,4 @@ AUTOMATION_HOST: 172.20.167.80
 AUTOMATION_DB: AUTOMATION_TEST
 AUTOMATION_USER: dummy
 AUTOMATION_PASS: dummy
-SEED_CONFIG: prod
+SEED_CONFIG: test
