Added seeding for platforms, manufacturers, and device types.

--- a/settings.yaml
+++ b/settings.yaml
@@ -1,5 +1,5 @@
-AUTOMATION_HOST: 172.20.167.80
-AUTOMATION_DB: AUTOMATION
+AUTOMATION_HOST: localhost
+AUTOMATION_DB: DG
 AUTOMATION_USER: dummy
 AUTOMATION_PASS: dummy
 SEED_CONFIG: test
