--- a/database/migrations/build.xml
+++ b/database/migrations/build.xml
@@ -4,8 +4,8 @@
                                                                
     <property environment="env"/>
     <property name="db.driver" value="com.mysql.jdbc.Driver" />
-    <property name="db.host" value="localhost" />
-    <property name="db.name" value="DG" />
+    <property name="db.host" value="172.20.167.80" />
+    <property name="db.name" value="AUTOMATION" />
     <property name="db.username" value="dummy" />
     <property name="db.password" value="dummy" />
     <property name="db.seedconf" value="test" />
