--- a/database/migrations/build.xml
+++ b/database/migrations/build.xml
@@ -5,10 +5,10 @@
     <property environment="env"/>
     <property name="db.driver" value="com.mysql.jdbc.Driver" />
     <property name="db.host" value="10.65.82.98" />
-    <property name="db.name" value="dummy" />
+    <property name="db.name" value="AUTOMATION" />
     <property name="db.username" value="dummy" />
-    <property name="db.password" value="test" />
-    <property name="db.seedconf" value="" />
+    <property name="db.password" value="dummy" />
+    <property name="db.seedconf" value="test" />
     <property name="db.url" value="jdbc:mysql://${db.host}/${db.name}" />
 
     <path id="mysql.classpath">
